# producer.consumer

./: README.md  f3qpmpzx.y4j.txt  ialtezf4.nb2.txt  szr5gcuv.dtl.txt
src/consumer/: CMakeLists.txt  consumer.cpp
src/consumer/build consumer/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  consumer.opensdf  consumer.sdf  consumer.sln  consumer.vcxproj  consumer.vcxproj.filters
src/consumer/build consumer/consumer.dir/Release/consumer.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/consumer/build consumer/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog
src/consumer/build consumer/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
src/producer/: CMakeLists.txt  producer.cpp
src/producer/build producer/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  producer.sln  producer.vcxproj  producer.vcxproj.filters
src/producer/build producer/producer.dir/Release/producer.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/producer/build producer/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog
(+4 files in other folders)
